--- a/src/index.css
+++ b/src/index.css
@@ -13,40 +13,38 @@ code {
     monospace;
 }
 
-.AssignmentCalendarDay a:hover {
+.assignment-calendar-day a:hover {
   /*background-color: lightblue;*/
   text-decoration: none;
   /*font-weight: bolder;*/
 }
 
-.inactive {
+.assignment-calendar-block-inactive {
   color: lightgray;
   text-decoration: none;
 }
-.active {
+.assignment-calendar-block-active {
   color: black;
   font-weight: bolder;
   text-decoration: none;
 }
-.active-past {
+.assignment-calendar-block-active-past {
   font-weight: normal;
   color: gray;
   text-decoration: none;
 }
 
-.AssignmentCalendarHover {
+.assignment-calendar-nav {
   cursor: pointer;
 }
 
-.AssignmentCalendarBlock {
+.assignment-calendar-block {
   width: auto;
   height: 100px;
 }
 
-.AssignmentCalendarNote {
+.assignment-calendar-note {
   font-size: 10px;
 }
 
-#AssignmentCalendarNav{
-  height: 30px !important;
-}
+
